# velox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  chatgpt_optimize_prompt.txt  codex_character_prompt.txt  codex_manifold_prompt.txt  codex_sandbox2_prompt.txt  codex_sandbox_prompt.txt  conanfile.py  ornith_full01_goal.txt  ornith_layout_goal.txt  ornith_proto01_goal.txt  portfile.cmake  test_arena_debug.cpp  test_ccd_debug.cpp  transform_world.py  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  cuda.yml  release.yml
benchmarks/: CMakeLists.txt  benchmark_broadphase.cpp  benchmark_cli.h  benchmark_framework.h  benchmark_narrowphase.cpp  benchmark_queries.cpp  benchmark_scaling.cpp  benchmark_scenes.h  benchmark_solver.cpp
build-clang/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  VeloxConfig.cmake  cmake_install.cmake
build-clang/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: VeloxConfig.cmake.in  determinism.cmake  embed_spirv.cmake  platform.cmake  repeat_test.cmake  version.cmake
design/: articulation.h  character_controller.h  manifold_clipping.h  serialization.h  vehicle.h
docs/: CONTRIBUTING.md  DEPRECATION_POLICY.md  Doxyfile  PORTABILITY.md  api-guide.md  api-stability.md  batched-queries.md  ccd-controls.md  ccd.md  collision-filtering.md  concepts.md  cross-platform.md  cuda-recovery.md  debugging.md  getting-started.md  known-limitations.md  packaging.md  performance.md  production-readiness.md  release-gate.md  serialization.md  sleeping.md  threading.md
docs/roadmap/: 01-persistent-contact-manifolds.md  02-gjk-epa-hardening.md  03-multi-toi-ccd.md  04-ccd-quality-controls.md  05-thread-safety-contract.md  06-api-versioning.md  07-documentation.md  08-differential-testing.md  09-geometry-fuzzing-and-long-soaks.md  10-real-workload-scene.md  11-character-controller.md  12-vehicle-model.md  13-ragdoll-articulation.md  14-joint-completeness.md  15-solver-options.md  16-batched-async-queries.md  17-runtime-collider-mutation.md  18-serialization.md  19-extra-shapes.md  20-parallel-island-solving.md  21-gpu-resident-stepping.md  22-cuda-error-recovery.md  23-performance-telemetry.md  24-cross-platform-determinism.md  25-large-worlds-double-precision.md  26-interactive-sandbox.md  27-platform-coverage.md  28-release-automation.md  29-community-infrastructure.md  PROTO01_NOTES.md  PROTO02_NOTES.md  PROTO03_04_NOTES.md  PROTO05_NOTES.md  PROTO08_NOTES.md  PROTO11_NOTES.md  PROTO12_NOTES.md  PROTO13_NOTES.md  PROTO15_NOTES.md  PROTO16_NOTES.md  PROTO17_NOTES.md  (+13 more)
examples/: CMakeLists.txt  batched_queries_demo.cpp  benchmark.cpp  bullet_demo.cpp  character_demo.cpp  cloth.cpp  contact_events.cpp  cuda_parity_demo.cpp  cuda_recovery_demo.cpp  cuda_smoke.cpp  debug_visualizer.cpp  destruction.cpp  determinism_demo.cpp  fuzz_demo.cpp  geometry_fuzz.cpp  gpu_debris_demo.cpp  hello_velox.cpp  imgui_debug_draw.h  imgui_debug_example.cpp  islands_demo.cpp  joints_demo.cpp  multi_threaded.cpp  physics_sandbox.cpp  platform_demo.cpp  profiler_demo.cpp  proto_manifold.cpp  queries_demo.cpp  ragdoll_chain.cpp  ragdoll_demo.cpp  release_gate.cpp  replay_diff_cli.cpp  rollback_demo.cpp  runtime_mutation_demo.cpp  serialize_demo.cpp  soft_body.cpp  solver_options_demo.cpp  stress_demo.cpp  thread_safety_demo.cpp  vehicle_demo.cpp  vehicle_terrain.cpp  (+2 more)
examples/sandbox/: CMakeLists.txt  font.h  input.cpp  input.h  main.cpp  mesh_gen.h  renderer.cpp  renderer.h  scenes.json  vk_loader.h  window.cpp  window.h
examples/sandbox/shaders/: line.vert  line_frag.h  line_vert.h  mesh.frag  mesh.vert  mesh_frag.h  mesh_vert.h  sky.frag  sky.vert  sky_frag.h  sky_vert.h  ui.vert  ui_frag.h  ui_vert.h
include/velox/: api_version.h  arena.h  backend.h  benchmark.h  body.h  ccd.h  character.h  collision_filter.h  debug_draw.h  error.h  joint.h  manifold.h  math.h  memory_pool.h  platform.h  profiler.h  queries.h  ragdoll.h  rollback.h  serialization.h  serialization_v2.h  shapes.h  simd.h  sleep.h  softbody.h  solver.h  stable_api.h  task_system.h  thread_safety.h  vehicle.h  velox.h  velox_c.h  version.h  world.h
marketing/video/: package-lock.json  package.json  tsconfig.json
marketing/video/src/: Root.tsx  VeloxVideo.tsx  theme.ts
marketing/video/src/scenes/: BenchmarkScene.tsx  CTAScene.tsx  CodeScene.tsx  DemoScene.tsx  FeaturesScene.tsx  ProblemScene.tsx  SolutionScene.tsx  TitleScene.tsx
scripts/: benchmark_regression.py  cross_platform_test.py  run_benchmarks.py
src/: aabb_tree.h  backend_cuda.cu  backend_vulkan.cpp  benchmark.cpp  broadphase.h  ccd.cpp  ccd.h  character.cpp  debug.cpp  geometry_diagnostics.h  gjk.cpp  gjk.h  joint_solver.h  manifold.cpp  manifold.h  mass_properties.h  narrowphase.h  queries.cpp  ragdoll.cpp  rollback.cpp  serialization.cpp  serialization_v2.cpp  sleep.cpp  sleep_stub.cpp  softbody.cpp  solver.cpp  stable_api.cpp  vehicle.cpp  velox_c.cpp  world.cpp
src/shaders/: integrate.comp  integrate_transforms.comp  narrow_sphere.comp  solve_contacts.comp
tests/cross_platform/: CMakeLists.txt  test_alignment.cpp  test_determinism.cpp  test_endianness.cpp  test_floating_point.cpp
tests/difftest/: CMakeLists.txt  compare.cpp  diag.cpp  diff_test.h  jolt_runner.cpp  main.cpp  scene_library.cpp  velox_runner.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  test_api_stability.cpp  test_arena.cpp  test_ccd.cpp  test_character.cpp  test_collision_filter.cpp  test_edge_cases.cpp  test_gjk.cpp  test_joints.cpp  test_joints_extended.cpp  test_mass_properties.cpp  test_math.cpp  test_narrowphase.cpp  test_numerical.cpp  test_queries.cpp  test_ragdoll.cpp  test_rollback.cpp  test_serialization.cpp  test_serialization_v2.cpp  test_sleep.cpp  test_softbody.cpp  test_thread_safety.cpp  test_vehicle.cpp  test_world.cpp
